--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["Daniel Landesman"]
 [tool.poetry.dependencies]
 python = "3.7.4"
 google-api-python-client = "^1.7.11"
+google-auth-oauthlib = "^0.4.1"
+html2text = "^2020.1.16"
 
 [tool.poetry.dev-dependencies]
 
