--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ python = "3.7.4"
 google-api-python-client = "^1.7.11"
 google-auth-oauthlib = "^0.4.1"
 html2text = "^2020.1.16"
+pyyaml = "^5.3"
+python-dotenv = "^0.10.5"
 
 [tool.poetry.dev-dependencies]
 
