-add crontab functionality -configure .env variables

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ html2text = "^2020.1.16"
 pyyaml = "^5.3"
 python-dotenv = "^0.10.5"
 python-crontab = "^2.4.0"
+#pyyaml = "^3.12"
 
 [tool.poetry.dev-dependencies]
 
