Updated for hebcal API functions 8-25-20

--- a/email_id.yaml
+++ b/email_id.yaml
@@ -107,3 +107,11 @@ dictitems:
 - cross-creek-minyan@googlegroups.com
 - ShabbatParshatShoftim
 : <159776724079.6918.6604917981131235806@1.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.ip6.arpa>
+? !!python/tuple
+- danlandesman@gmail.com
+- ShabbatParshasKiSeitzei
+: <159840850674.22123.13648365334290685033@1.0.0.127.in-addr.arpa>
+? !!python/tuple
+- cross-creek-minyan@googlegroups.com
+- ShabbatParshasKiSeitzei
+: <159840859237.22249.6413555713737951509@1.0.0.127.in-addr.arpa>
